[gd_scene load_steps=6 format=3 uid="uid://ckybm688sreip"]

[ext_resource type="PackedScene" uid="uid://bi6puoisxmy8v" path="res://scenes/game_entities/gamemode_koth.tscn" id="1_8j66e"]
[ext_resource type="Script" path="res://scenes/maps/koth_forest.gd" id="1_tdomn"]
[ext_resource type="PackedScene" uid="uid://bufmv1jfp3b32" path="res://scenes/maps/arena_3.tscn" id="1_vbtog"]
[ext_resource type="PackedScene" uid="uid://c8rxt7617vao1" path="res://scenes/game_entities/capture_point.tscn" id="4_pt542"]
[ext_resource type="PackedScene" uid="uid://6j2hnk8r65j1" path="res://scenes/game_entities/nuke_spawner.tscn" id="5_115cg"]

[node name="KothForest" type="Node3D"]
script = ExtResource("1_tdomn")

[node name="GamemodeKoth" parent="." instance=ExtResource("1_8j66e")]
capture_point_path = NodePath("../CapturePoint")

[node name="CapturePoint" parent="." instance=ExtResource("4_pt542")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)

[node name="NukeSpawner" parent="." instance=ExtResource("5_115cg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 300, 0)

[node name="arena_3" parent="." instance=ExtResource("1_vbtog")]

[node name="Players" type="Node3D" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="Players"]
_spawnable_scenes = PackedStringArray("res://scenes/player.tscn")
spawn_path = NodePath("..")

[connection signal="team_win" from="GamemodeKoth" to="." method="_on_gamemode_koth_team_win"]
[connection signal="nuke_over" from="NukeSpawner" to="." method="nuke_over"]
